@@ -9,7 +9,7 @@ COPYRIGHT
 
 Cobertura is
 Copyright (C) 2003 jcoverage ltd.
-Copyright (C) 2005 Mark Doliner
+Copyright (C) 2005 Mark Doliner, Jeremy Thomerson
 
 
 LICENSE
