@@ -19,7 +19,7 @@
  * USA
  */
 
-package net.sourceforge.cobertura.reporting.html;
+package net.sourceforge.cobertura.reporting;
 
 import java.util.Iterator;
 import java.util.Map;
